[package]
name = "short_linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
dotenv = "0.15.0"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde = { version = "1.0.181", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.34.0", features = ["full"] }
walkdir = "2"
zip = "0.6.6"
